feat: Se agrego la gestión de elementos hijos de productos
