# src/main/java/com/isanorte/constructora_api/mapper/ProductoMapper.java
@@ -7,7 +7,17 @@ import org.mapstruct.ReportingPolicy;
 
 import com.isanorte.constructora_api.dto.request.ProductoRequest;
 import com.isanorte.constructora_api.dto.request.ProductoUpdateRequest;
+import com.isanorte.constructora_api.dto.request.ConfiguracionCalculoRequest;
+import com.isanorte.constructora_api.dto.request.DocumentoProductoRequest;
+import com.isanorte.constructora_api.dto.request.EspecificacionProductoRequest;
+import com.isanorte.constructora_api.dto.request.ImagenProductoRequest;
+import com.isanorte.constructora_api.dto.request.VarianteProductoRequest;
+import com.isanorte.constructora_api.dto.response.ConfiguracionCalculoResponse;
+import com.isanorte.constructora_api.dto.response.DocumentoProductoResponse;
+import com.isanorte.constructora_api.dto.response.EspecificacionProductoResponse;
+import com.isanorte.constructora_api.dto.response.ImagenProductoResponse;
 import com.isanorte.constructora_api.dto.response.ProductoResponse;
+import com.isanorte.constructora_api.dto.response.VarianteProductoResponse;
 import com.isanorte.constructora_api.model.CategoriaProducto;
 import com.isanorte.constructora_api.model.ConfiguracionCalculo;
 import com.isanorte.constructora_api.model.DocumentoProducto;
@@ -69,19 +79,71 @@ public interface ProductoMapper {
     @Mapping(target = "fechaActualizacion", ignore = true)
     ConfiguracionCalculo toConfiguracionCalculoEntity(ProductoRequest.ConfiguracionCalculoRequest request);
 
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "producto", ignore = true)
+    @Mapping(target = "fechaCreacion", ignore = true)
+    @Mapping(target = "fechaActualizacion", ignore = true)
+    VarianteProducto toVarianteEntity(VarianteProductoRequest request);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "producto", ignore = true)
+    @Mapping(target = "fechaCreacion", ignore = true)
+    @Mapping(target = "fechaActualizacion", ignore = true)
+    void updateVarianteEntity(VarianteProductoRequest request, @MappingTarget VarianteProducto variante);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "producto", ignore = true)
+    @Mapping(target = "fechaCreacion", ignore = true)
+    ImagenProducto toImagenEntity(ImagenProductoRequest request);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "producto", ignore = true)
+    @Mapping(target = "fechaCreacion", ignore = true)
+    void updateImagenEntity(ImagenProductoRequest request, @MappingTarget ImagenProducto imagen);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "producto", ignore = true)
+    EspecificacionProducto toEspecificacionEntity(EspecificacionProductoRequest request);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "producto", ignore = true)
+    void updateEspecificacionEntity(
+            EspecificacionProductoRequest request, @MappingTarget EspecificacionProducto especificacion);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "producto", ignore = true)
+    @Mapping(target = "fechaCreacion", ignore = true)
+    DocumentoProducto toDocumentoEntity(DocumentoProductoRequest request);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "producto", ignore = true)
+    @Mapping(target = "fechaCreacion", ignore = true)
+    void updateDocumentoEntity(DocumentoProductoRequest request, @MappingTarget DocumentoProducto documento);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "producto", ignore = true)
+    @Mapping(target = "fechaActualizacion", ignore = true)
+    ConfiguracionCalculo toConfiguracionCalculoEntity(ConfiguracionCalculoRequest request);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "producto", ignore = true)
+    @Mapping(target = "fechaActualizacion", ignore = true)
+    void updateConfiguracionCalculoEntity(
+            ConfiguracionCalculoRequest request, @MappingTarget ConfiguracionCalculo configuracion);
+
     ProductoResponse toResponse(Producto producto);
 
     ProductoResponse.UnidadNegocioResumen toUnidadNegocioResumen(UnidadNegocio unidadNegocio);
 
     ProductoResponse.CategoriaResumen toCategoriaResumen(CategoriaProducto categoria);
 
-    ProductoResponse.VarianteResponse toVarianteResponse(VarianteProducto variante);
+    VarianteProductoResponse toVarianteResponse(VarianteProducto variante);
 
-    ProductoResponse.ImagenResponse toImagenResponse(ImagenProducto imagen);
+    ImagenProductoResponse toImagenResponse(ImagenProducto imagen);
 
-    ProductoResponse.EspecificacionResponse toEspecificacionResponse(EspecificacionProducto especificacion);
+    EspecificacionProductoResponse toEspecificacionResponse(EspecificacionProducto especificacion);
 
-    ProductoResponse.DocumentoResponse toDocumentoResponse(DocumentoProducto documento);
+    DocumentoProductoResponse toDocumentoResponse(DocumentoProducto documento);
 
-    ProductoResponse.ConfiguracionCalculoResponse toConfiguracionCalculoResponse(ConfiguracionCalculo configuracion);
+    ConfiguracionCalculoResponse toConfiguracionCalculoResponse(ConfiguracionCalculo configuracion);
 }
